# cargo-cleaner

./: .gitignore  Cargo.toml  flake.nix  index.html  package.json  vite.config.ts
.cargo/: config.toml
cli/: Cargo.toml
cli/src/: main.rs
crates/cargo-cleaner-core/: Cargo.toml
crates/cargo-cleaner-core/src/: cleaner.rs  config.rs  launchagent.rs  lib.rs  macos.rs  scanner.rs  scheduler.rs  state.rs
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: dashboard.tsx  directories.tsx  exclusions.tsx  permissions.tsx  schedule.tsx
src/hooks/: use-cleaning.ts  use-config.ts  use-state.ts
src/types/: index.ts
